# sigil-vm

./: .gitmodules  CMakeLists.txt  dasharo-git.txt
assets/scripts/: clone-repos.sh
